# ArcheryCounter

./: .dockerignore  .gitignore  .travis.yml  App.tsx  ArcheryCounterNative.podspec  CLAUDE.md  CMakeLists.txt  Dockerfile.annotate  LICENSE  NN_approach.hpp  README.md  _clang-format  app.json  appveyor.yml  colour_filters.cpp  colour_filters.hpp  docker-compose.yml  ellispes_approach.cpp  ellispes_approach.hpp  eslint.config.js  histo_approach.cpp  hough_approach.hpp  jest.config.js  keypoint_approach.cpp  keypoint_approach.hpp  main.cpp  package-lock.json  package.json  react-native.config.js  tsconfig.scripts.json
.github/: dependabot.yml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/archerycounter/: ArcheryCounterModule.java  ArcheryCounterPackage.java  MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/helloworld/: ArcheryCounterModule.java  ArcheryCounterPackage.java
android/app/src/main/jni/: ArcheryCounterJNI.cpp  CMakeLists.txt
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/archerycounter/: ArcheryCounterModuleTest.java
cpp/: ArcheryCounterModule.cpp  ArcheryCounterModule.hpp
data/: annotations.parquet
docs/: annotation.md  annotation_works.md  improvement_failure.md  jsmigration.md  nn_plan.md  performance.md  plan.md  research.md
images/: annotate.json
ios/: Podfile
ios/ArcheryCounter/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/ArcheryCounter.xcodeproj/: project.pbxproj
ios/ArcheryCounter.xcodeproj/xcshareddata/xcschemes/: ArcheryCounter.xcscheme
ios/ArcheryCounter.xcworkspace/: contents.xcworkspacedata
ios/ArcheryCounterBridge/: RCTArcheryCounter.h  RCTArcheryCounter.mm
memory/: MEMORY.md  feedback_arrow_detection_priority.md  feedback_run_all_tests.md  project_detection_improvements.md  project_test_architecture.md
native/: CMakeLists.txt  colour_filters.cpp  colour_filters.hpp  ellispes_approach.cpp  ellispes_approach.hpp  histo_approach.hpp  hough_approach.cpp  math_utils.hpp  pretreatment.cpp  pretreatment.hpp  sources.hpp.in
native/tests/: test_target_detection.cpp
scripts/: accuracy-report.ts  annotate.html  annotate.ts  annotateInterface.ts  arrow-diag.ts  arrow-miss-analysis.ts  benchmark.ts  checkBoundary.ts  debug_boundary.ts  detect-worker.ts  diag-wa0004.ts  diag201217.ts  diag201217b.ts  dump-annotations.ts  eval-nn.ts  migrate-clamp-points.ts  nn-regression-check.ts  patch-gradle-plugin.js  r7r5-ratios.ts  regen-generated.ts  ring-diag.ts  seed-from-parquet.ts  visualize.ts
scripts/nn/: arrow_detector.onnx  arrow_detector_int8.onnx  boundary_dataset.py  boundary_export.py  boundary_model.py  boundary_train.py  check_peaks.py  check_preprocessing_parity.py  dataset.py  export.py  inspect_dataset.py  main.py  model.py  pyproject.toml  train.py
scripts/nn/checkpoints/: train_log.csv
scripts/nn/tests/: conftest.py  test_dataset.py  test_ground_truth.py
src/: ArcheryCounter.ts  NativeArcheryCounter.ts  arrowDetection.ts  arrowDetector.ts  boundaryDetector.ts  connectedComponents.ts  contourTrace.ts  imageLoader.ts  letterboxTransform.ts  ortComponents.ts  scoring.ts  spline.ts  targetDetection.ts  useArcheryScorer.ts
src/__mocks__/: NativeArcheryCounter.ts
src/__tests__/: ArcheryCounter.test.ts  annotateConversions.test.ts  globalSetup.ts  groundTruth.test.ts  letterboxTransform.test.ts  nnRegression.test.ts  scripts.test.ts  spline.test.ts  targetDetection.test.ts  targetDetectionUtils.test.ts  useArcheryScorer.test.ts
src/components/: RingOverlay.tsx
src/screens/: HomeScreen.tsx
