[project]
name = "ArcheryCounter"
version = "0.1.0"
description = "Tools to detect and grade arrows on a FITA Target Faces"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=1.3",
    "numpy>=1.24",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "pillow>=10.0",
    "psycopg2-binary>=2.9.11",
    "scipy>=1.17.1",
    "torch>=2.1",
    "torchvision>=0.16",
    "tqdm>=4.67.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
